minimal working auth

--- a/WebApplication/Views/Auth/Login.cshtml
+++ b/WebApplication/Views/Auth/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication.Models.LoginModel
+﻿@model Models.Auth.LoginModel
 
 @{
     ViewBag.Title = "title";
@@ -6,10 +6,11 @@
 
 <h2>Log in</h2>
 
-@Html.ValidationSummary(true)
 
 @using (Html.BeginForm("Login", "Auth", FormMethod.Post))
 {
+    @Html.ValidationSummary(false)
+    
     @Html.EditorForModel()
     <button>Log in</button>
 }
