--- a/WebApplication/Views/Auth/Register.cshtml
+++ b/WebApplication/Views/Auth/Register.cshtml
@@ -7,6 +7,8 @@
 
 @using (Html.BeginForm("Register", "Auth", FormMethod.Post))
 {
+    @Html.ValidationSummary(true)
+    
     @Html.EditorForModel()
     
     <button type="submit">REGISTER</button>    
